alignment fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,6 +130,10 @@ h3{
   box-shadow: 0 0 3px 0 rgba(0,0,0,0.1);
 }
 
+.shadow-custom-top{
+  box-shadow: 0 -4px 6px 0 rgba(0,0,0,0.05);
+}
+
 .underlined{
   position: relative;
   overflow: visible;
